# tika-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
app/: debug_test_client.py  main.py  mcp_client_example.py  model.py  register_mcp_server.py  simple_mcp_server.py  test_client.py  test_simple_mcp.py  test_tika_direct.py  test_tika_simple.py  tika_client.py
