[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tika-mcp"
version = "0.1.0"
description = "An MCP server that wraps Apache Tika for document content and metadata extraction."
authors = [
    { name = "Davey Proctor" }
]
dependencies = [
    "mcp[cli]>=0.1.0",
    "httpx>=0.25.0"
]

[project.scripts]
tika-mcp = "app.main:main"

[tool.setuptools]
packages = ["app"]
